Version 0.65 - 8 December 2008

- keyboarddrake:
  o configure hal so Xorg can get xkb info
    (nb: for now, you must "service haldaemon restart" to be taken into account)
- XFdrake:
  o generic flat planel must allow "800x480 @ 60.00 Hz (GTF) hsync: 29.82 kHz"
    so "HorizSync 31.5-90" is too strict, generating "HorizSync 29.5-90"
  o have Option "PanelGeometry" "XXxYY" on geode driver
  o do not display the weird ratios 128/75, 85/48 (for 1024x600 and 1360x768)
  o do not load "Type1" module by default (disabled in xserver-1.5.x)
  o special hack for gdium: the "default monitor" is "Plug'n Play" instead of
    good_default_monitor() (it will work since the resolution is passed to the
    kernel on gdium)
  o there is no reason "automatic" resolution should imply "automatic" color
    depth
- mousedrake, XFdrake:
  o do not use /dev/mouse symlink (in xorg.conf)
- mousedrake
  o do not propose to test the chosen mice
    (it doesn't handle evdev/synaptics and so is quite obsolete nowadays)

Version 0.64 - 1 October 2008

- XFdrake:
  o explicitly Load or Disable module "dri"
    (to be independent of Xorg's default choice)

Version 0.63 - 30 September 2008

- translations updates

Version 0.62 - 25 September 2008

- XFdrake:
  o set "PreferredMode" in Monitor section if the user changes the resolution
   (we still do not use PreferredMode for the default resolution)

Version 0.61 - 11 September 2008

- keyboarddrake:
  o fix lithuanian keyboard choices (cf #41031)
- XFdrake:
  o do set a background image when using resolution "Automatic" (#43644)

Version 0.60 - 9 September 2008

- XFdrake:
  o allow xorg.conf to have no "Monitor" section (#42793)
  o [bugfix] fix clicking on "Options" when Composite is disabled 
    (regression introduced in 0.58) (#43710)

Version 0.59 - 18 August 2008

- XFdrake:
  o use 24dpp by default, even on DRI (needed for kde4)
  o ensure we don't drop non-main "Device" (when modifying "Options", #41410)